<resources>
    <string name="app_name">NavigationViewDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <string name="cd_navdrawer_image">Navigation Drawer Image</string>
    <string name="cd_navdrawer_user_picture">User Profile Image</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="nav_sub_header">Sub header</string>
    <string name="nav_sub_item_1">Sub item 1</string>
    <string name="nav_sub_item_2">Sub item 2</string>

</resources>
